# ebnf-toolkit

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
proptest-regressions/: nodes.txt  proptesting.txt
src/: container.rs  debug.rs  error.rs  expr.rs  lexing.rs  lib.rs  logos_lexer.rs  nodes.rs  parser.rs  proptesting.rs  rule.rs  simplification.rs  token.rs  token_data.rs
src/snapshots/: ebnf_omnitool__tests__file_parse.snap
tests/: failures_displays.rs  irc.ebnf  irc.rs
tests/snapshots/: failures_displays__empty_input.snap  failures_displays__incomplete_rule-2.snap  failures_displays__incomplete_rule.snap  failures_displays__invalid_rule.snap  failures_displays__invalid_start-2.snap  failures_displays__invalid_start-3.snap  failures_displays__invalid_start-4.snap  failures_displays__invalid_start-5.snap  failures_displays__invalid_start-6.snap  failures_displays__invalid_start-7.snap  failures_displays__invalid_start.snap  failures_displays__invalid_syntax_rule-2.snap  failures_displays__invalid_syntax_rule-3.snap  failures_displays__invalid_syntax_rule.snap  failures_displays__unclosed_string.snap  irc__irc_grammar-10.snap  irc__irc_grammar-11.snap  irc__irc_grammar-12.snap  irc__irc_grammar-13.snap  irc__irc_grammar-14.snap  irc__irc_grammar-15.snap  irc__irc_grammar-15.snap.new  irc__irc_grammar-16.snap  irc__irc_grammar-16.snap.new  irc__irc_grammar-17.snap  irc__irc_grammar-17.snap.new  irc__irc_grammar-18.snap  irc__irc_grammar-19.snap  irc__irc_grammar-19.snap.new  irc__irc_grammar-2.snap  irc__irc_grammar-20.snap  irc__irc_grammar-3.snap  irc__irc_grammar-4.snap  irc__irc_grammar-5.snap  irc__irc_grammar-6.snap  irc__irc_grammar-7.snap  irc__irc_grammar-8.snap  irc__irc_grammar-9.snap  irc__irc_grammar.snap  irc__irc_grammar.snap.new
xtask/: Cargo.toml
xtask/src/: main.rs
