[package]
name = "ebnf-toolkit"
version = "0.1.0"
edition = "2024"
authors = ["Ewan Mount"]
description = "A library for parsing and manipulating Extended Backus–Naur form grammars"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ejmount/ebnf-toolkit"
keywords = ["parser", "parsing"]
categories = ["parser-implementations"]


[dependencies]
ariadne = "0.5.1"
arrayvec = "0.7.6"
display_tree = "1.1.2"
regex = "1.11.1"
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
winnow = "0.7.10"

[dev-dependencies]
insta = "1.43.1"

[profile.dev.package]
insta.opt-level = 3
