[package]
name = "ebnf-toolkit"
version = "0.1.0"
edition = "2024"
authors = ["Ewan Mount"]
description = "A library for parsing and manipulating Extended Backus–Naur form grammars"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ejmount/ebnf-toolkit"
keywords = ["parser", "parsing"]
categories = ["parser-implementations"]


[dependencies]
ariadne = "0.5.1"
display_tree = "1.1.2"
logos = "0.15.0"
regex = "1.11.1"
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
proptest = "1.7.0"
proptest-derive = "0.6.0"

[dev-dependencies]
insta = "1.43.1"

[profile.dev.package]
insta.opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[workspace]
members = ["xtask"]