[package]
name = "xtask"
version = "0.0.0" # Don't want to publish this
# authors.workspace = true
# license.workspace = true
# repository.workspace = true
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "xtask"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
duct = "1.0.0"
colored = "3.0.0"
fs_extra = "1.3.0"
open = "5.3.0"

